Add Tailwind news

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -26,6 +26,8 @@ export async function getStaticProps() {
 
 - 🤖 [ChatGPT ha sacado oficialmente su _Code Interpreter_](https://hipertextual.com/2023/07/chatgpt-lanza-code-interpreter-complemento) y las primeras pruebas te vuelan la cabeza. Te permite subir ficheros, analizarlos, transformarlos... y te genera el **código en Python**. ¡Espectacular!
 
+- 🍃 [¡Viene nueva versión de Tailwind!](https://www.youtube.com/watch?v=CLkxRnRQtDE) Con **mejoras de rendimiento** (la mitad de tiempo), mucho **más inteligente** (¡no necesitarás indicarle la configuración de _content_, lo hace automáticamente!) y catálogo de componentes llamado _Catalyst_.
+
 - 🚀 [GitLab desplegó en viernes y... bueno, **no le fue bien**](https://www.theregister.com/2023/07/07/gitlab_outage/). También es verdad que les podía haber pasado cualquier otro día. ¡Pero ahí queda la historia!
 
 - 🆕 [Prettier sube de versión](https://prettier.io/blog/2023/07/05/3.0.0.html) con novedades y cambios que rompen. [Vite llega a su versión 4.4](https://github.com/vitejs/vite/blob/main/packages/vite/CHANGELOG.md#440-2023-07-06) con la novedad que están probando LightingCSS, una **alternativa más rápida de PostCSS**.
