Update about GA

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -60,6 +60,8 @@ console.log(numbers.length)
 
 - 🧑‍⚖️ ¡Cuidado! [En Suecia consideran que **Google Analytics es ilegal**](https://techcrunch.com/2023/07/03/google-analytics-sweden-gdpr-fines/) porque no cumple la GDPR (ley de privacidad de datos de la UE). Ni con aviso de cookies. Se suman a otros paises como [Francia o Italia](https://twitter.com/rtayar/status/1499290761036275714).
 
+> ¡Actualización! Unas horas después de enviar la lista de correo, resulta que [la UE y EEUU han llegado a un acuerdo.](https://twitter.com/analyticsnerd/status/1678459561215229953) Por lo que **Google Analytics, que llevaba años siendo virtualmente ilegal en Europa, vuelve a ser legal**.
+
 ### 🧰 Recursos para programadores
 
 - 📈 Una [espectacular galería de gráficas](https://www.react-graph-gallery.com/) desarrolladas con React y D3.js.
