Add more salseo

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -61,6 +61,8 @@ Tienes la **solución al final** de la _newsletter_.
 
 - 📭 ¿Alguna vez te has imaginado **cómo es el día a día de un Senior Manager en Amazon**? Sí, has acertado, [cientos de correos te esperan en tu bandeja de entrada](https://newsletter.pragmaticengineer.com/p/a-day-in-the-life-of-a-senior-manager).
 
+- 🍅 El bueno de [Theo Browne ha sacado un tuit para darle picante al desarrollo web](https://twitter.com/t3dotgg/status/1685041189542838272). Y mucha gente no ha perdido la oportunidad de sacarse toda la bilis.
+
 ### 😮 ¡Ojo con esto!
 
 - 📈 Ojo con el mercado tech. Datos que demuestran que [Google, Amazon, Microsoft y Meta están volviendo a contratar](https://twitter.com/AznWeng/status/1678396820295147520). Respecto a finales del primer trimestre **han subido sus ofertas un 100%, 40%, 85% y 162% respectivamente**. ¡Pinta bien! Veremos si la tendencia sigue al alza.
