--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -11,7 +11,7 @@ export async function getStaticProps() {
 
 --- 
 
-![Stack Overflow de libros y ordenadores](@/images/12.webp)
+![Una oficina llena de cosas, con un ordenador encendido. No hay nadie.](@/images/12.webp)
 
 > **[Próximos directos en Twitch 🟣](https://twitch.tv/midudev)** (18H - hora España)<br /><br />
 > HOY: **DevsLeague ¡LA FINAL!: Competición entre programadores**<br />
