--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -11,7 +11,7 @@ export async function getStaticProps() {
 
 --- 
 
-![Una chica que parece programadora con muchos billetes encima de su mesa](@/images/14.webp)
+![Una comparación de Bun con npm y pnpm y salgo al lado con corazones en los ojos viendo los resultados](@/images/14.webp)
 
 ## ¡Llega Bun y pinta muy bien! La muerte de las cookies y el movimiento de Google {{ date: '2023-12-06T00:00Z' }}
 
