Add codember text

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -21,6 +21,8 @@ export async function getStaticProps() {
 > JUEVES 23 noviembre 20H: **CURSO NEXT.JS 14 - SERVER ACTIONS**<br />
 > LUNES 27 noviembre 18H: **NOTICIAS de PROGRAMACIÓN y TECH**
 
+¡Ah! Si quieres [mejorar tu lógica de programación, estamos en pleno Codember](https://codember.dev/). Es un **juego con retos de programación y secretos**. Totalmente **gratis**. Entra a la web: https://codember.dev/
+
 ### ¡Locura en el mundo de la Inteligencia Artificial! OpenAI en llamas
 
 El pasado 17 de noviembre, **Sam Altman era despedido como CEO de OpenAI, la empresa de ChatGPT.** Desde ese momento han pasado MUCHAS cosas que te paso a explicar porque es un momento histórico en el mundo de la IA y la tecnología.
