--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -23,34 +23,34 @@ export async function getStaticProps() {
 
 ¡Ah! Si quieres [mejorar tu lógica de programación, estamos en pleno Codember](https://codember.dev/). Es un **juego con retos de programación y secretos**. Totalmente **gratis**. Entra a la web: https://codember.dev/
 
-### ¡Locura en el mundo de la Inteligencia Artificial! OpenAI en llamas
+### 🔥 ¡Locura en el mundo de la Inteligencia Artificial! OpenAI en llamas
 
 El pasado 17 de noviembre, **Sam Altman era despedido como CEO de OpenAI, la empresa de ChatGPT.** Desde ese momento han pasado MUCHAS cosas que te paso a explicar porque es un momento histórico en el mundo de la IA y la tecnología.
 
 [Ver el vídeo con toda la explicación](https://www.youtube.com/watch?v=p4XSrQK19mw)
 
-#### 17 de noviembre
-- [OpenAI despide a Sam Altman](https://twitter.com/OpenAI/status/1725611900262588813) al considerar que Altman no era "consistentemente sincero en sus comunicaciones".
+#### 17 de noviembre... ¡El despido!
+- [👋 OpenAI despide a Sam Altman](https://twitter.com/OpenAI/status/1725611900262588813) al considerar que Altman no era "consistentemente sincero en sus comunicaciones".
 - _Mira Murati_, CTO de OpenAI, pasa a ser la CEO de la empresa.
 - _Greg Brockman_, cofundador y presidente de OpenAI, también es eliminado del Board of Directors. [Su reacción en X](https://twitter.com/gdb/status/1725736242137182594).
-- **El consejo de administración son 6 personas contando a Sam y Greg.** Los otros 4 son los que votan para despedir a Altman. Entre ellos están el CEO de Quora, competidor de ChatGPT, y Ilya Sutskever, co-fundador y amigo de Sam.
-- ¿Razones reales del despido? [Teoría de problemas de seguridad](https://twitter.com/dzhng/status/1725637133883547705), que [ignoraba los avisos de los ingenieros](https://twitter.com/FreddieRaynolds/status/1725656473080877144) o que [había conseguido una Inteligencia Artificial General](https://twitter.com/rowancheung/status/1725961157863755790) (AGI).
+- 👀 **El consejo de administración son 6 personas contando a Sam y Greg.** Los otros 4 son los que votan para despedir a Altman. Entre ellos están el CEO de Quora, competidor de ChatGPT, y Ilya Sutskever, co-fundador y amigo de Sam.
+- 🕵️‍♂️ ¿Razones reales del despido? [Teoría de problemas de seguridad](https://twitter.com/dzhng/status/1725637133883547705), que [ignoraba los avisos de los ingenieros](https://twitter.com/FreddieRaynolds/status/1725656473080877144) o que [había conseguido una Inteligencia Artificial General](https://twitter.com/rowancheung/status/1725961157863755790) (AGI).
 
-#### 18 y 19 de noviembre, el rollback
+#### 18 y 19 de noviembre, el rollback ♻️
 
 - Primeros rumores que dice que [Sam Altman volvería a ser CEO según The Verge.](https://twitter.com/rowancheung/status/1726011179766816815)
 - Todo el board debe dimitir si quiere que Sam vuelva. [Hay un ultimatúm.](https://twitter.com/rowancheung/status/1726048462884737099)
-- [Sam Altman publica una foto en las oficinas de OpenAI](https://twitter.com/sama/status/1726345564059832609/photo/1) diciendo que será la última vez que tenga un pase de invitado. ¿Es porque vuelve como CEO?
-- Parece que [se llega a un acuerdo para que vuelva](https://twitter.com/blader/status/1726058402542244106). Pero...
+- 📸 [Sam Altman publica una foto en las oficinas de OpenAI](https://twitter.com/sama/status/1726345564059832609/photo/1) diciendo que será la última vez que tenga un pase de invitado. ¿Es porque vuelve como CEO?
+- ✍️ Parece que [se llega a un acuerdo para que vuelva](https://twitter.com/blader/status/1726058402542244106). Pero...
 
 #### ¡Microsoft se queda con Sam! El ex-CEO de Twitch a escena
 
-- Emmett Shear, ex-CEO de Twitch, confirma que [será el nuevo CEO de OpenAI](https://twitter.com/eshear/status/1726526112019382275). Por sorpresa.
-- Satya Nadella, CEO de Microsoft, confirma que Sam Altman y Greg Brockman fundarán una empresa subsidiaria dentro de Microsoft y serán [el nuevo CEO y presidente de la misma.](https://twitter.com/satyanadella/status/1726509045803336122)
-- Elon Musk, bastante activo en todo momento, [publica un vídeo editado con el Risitas para dar su punto de vista.](https://twitter.com/elonmusk/status/1726666446355517448)
+- 😮 Emmett Shear, ex-CEO de Twitch, confirma que [será el nuevo CEO de OpenAI](https://twitter.com/eshear/status/1726526112019382275). Por sorpresa.
+- 😱 Satya Nadella, CEO de Microsoft, confirma que Sam Altman y Greg Brockman fundarán una empresa subsidiaria dentro de Microsoft y serán [el nuevo CEO y presidente de la misma.](https://twitter.com/satyanadella/status/1726509045803336122)
+- ☄️ Elon Musk, bastante activo en todo momento, [publica un vídeo editado con el Risitas para dar su punto de vista.](https://twitter.com/elonmusk/status/1726666446355517448)
 - Ilya Sutskever [se arrepiente](https://twitter.com/ilyasut/status/1726590052392956028) de haber despedido a Sam Altman.
 - Mira Murati, CTO de OpenAI, dice que ["OpenAI no es nada sin su gente"](https://twitter.com/miramurati/status/1726542556203483392).
-- [738 empleados de OpenAI](https://www.xataka.com/empresas-y-economia/openai-se-hunde-490-empleados-se-amotinan-quieren-que-sam-altman-vuelva-como-ceo) (de unos 770 en total) suscriben una carta pidiendo al consejo de administración que dimita y que devuelva a Sam a su puesto original.
+- 📧 [738 empleados de OpenAI](https://www.xataka.com/empresas-y-economia/openai-se-hunde-490-empleados-se-amotinan-quieren-que-sam-altman-vuelva-como-ceo) (de unos 770 en total) suscriben una carta pidiendo al consejo de administración que dimita y que devuelva a Sam a su puesto original.
 
 ¡Y por ahora así ha quedado la cosa! Es un resumen rápido, pero te recuerdo que tengo un [vídeo donde te explico todo el salseo.](https://www.youtube.com/watch?v=p4XSrQK19mw)
 
@@ -69,7 +69,6 @@ function greetUser() {
 
 greetUser();
 ```
----
 
 ### 📰 Noticias de Programación
 
