--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -11,9 +11,7 @@ export async function getStaticProps() {
 
 ---
 
-![](@/images/21.webp)
-
-## 
+![Gente fundida trabajando demasiadas horas en el trabajo](@/images/21.webp)
 
 > **[Próximos directos en Twitch 🟣](https://twitch.tv/midudev)**<br /><br />
 > HOY a las 18H: **DESARROLLO desde cero para REALTIME (multijugador, chats y más)**<br />
@@ -34,6 +32,9 @@ export async function getStaticProps() {
 
 - 🔄 Si tienes que crear unos **diagramas con relaciones**, ojo con este [recurso para hacerlo con TypeScript](https://tsdiagram.com/). Ojalá algo así en mis tiempos de universidad.
 
+- 🔥 ¿Necesitas un DOMINIO para tu proyecto? **Consigue tu .dev o .com por sólo 6€ al año.** Usa el código _DONDOMINIOMOLA_ en [https://midu.link/dondominio](https://midu.link/dondominio)
+
+
 ### Reto de JavaScript
 
 Nos han pasado este código de JavaScript y nos preguntan qué aparecerá en la salida de la consola. ¿Lo sabes?
@@ -52,7 +53,7 @@ console.log(b === c)
 
 - 🤖 [Google ha lanzado Gemini](https://deepmind.google/technologies/gemini/#introduction), su nueva IA. Segúns sus propios datos saca, en la mayoría de los casos, mejores puntuaciones que GPT4.
 
-- 🔥 Es multimodal, así que funciona para generar texto, imagen, vídeo y hasta audio.
+- 📸 Es multimodal, así que funciona para generar texto, imagen, vídeo y hasta audio.
 
 - 👀 Sacaron un [vídeo demostración donde parecía que en tiempo real](https://www.youtube.com/watch?v=UIZAiXYceBI) la IA se aduecuaba a lo que estaba viendo...
 
